--- a/src/components/Watch.css
+++ b/src/components/Watch.css
@@ -1,16 +1,5 @@
 
 
-* {  box-sizing:border-box; }
-body {
-  margin:0; 
-  padding:10;
-  text-align: center;
-}
-
-
-.App-link {
-  color: #61dafb;
-}
 
 .searchBar input {
   margin-top: 20px;
@@ -27,8 +16,10 @@ body {
  margin-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
+ align-content: center;
+ padding-right: 10px;
+ background-color: green;
 }
-
 
 
 
