--- a/src/components/Watch.css
+++ b/src/components/Watch.css
@@ -19,5 +19,14 @@
 
 }
 
+.saveVideo {
+
+  margin-top: 90px;
+  background: black;
+  width: 200px;
+  border: 1px solid black;
+  color: white;
+  border-radius: 20px;
+}
 
 
