--- a/src/components/video_detail.css
+++ b/src/components/video_detail.css
@@ -1,13 +1,14 @@
 .video-detail {
-  height: 400px;
+  height: 450px;
   width: 49%;
   border: 1px solid yellow;
   float: left;
   border-radius: 20px;
   margin-right: .5px;
+  padding-top: 10px;
   
 }
 
 p {
-  margin-top: 20px;
+  margin-top: 30px;
 }
