--- a/src/components/Watch.css
+++ b/src/components/Watch.css
@@ -18,7 +18,7 @@
  padding-right: 10px;
 
 }
-
+/*
 .saveVideo {
 
   margin-top: 90px;
@@ -28,5 +28,5 @@
   color: white;
   border-radius: 20px;
 }
-
+*/
 
