--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,10 +1,9 @@
-.container {
-
-    width: 500px;
-    margin: 40px auto;
-    border: 1px solid black;
-}
-
-.form-group {
-    width: 300px;
+.LoginPage {
+     
+     width: 450px;
+     Height: 500px;
+     border: 1px solid black;
+     margin-top: 30px;
+     display: inline-block;
+     padding-top: 10px;
 }
