--- a/src/components/style/RegistrationForm.css
+++ b/src/components/style/RegistrationForm.css
@@ -3,19 +3,13 @@
     height: 400px;
     width: 450px;
     margin: auto;
-    background: black;
-    color: white;
-}
-
-body {
-    background: #ddc6ad;
-    
+    /*background: black;*/
+    color: black;
 }
 
 button {
     margin-top: 10px;
     width: 195px;
-    background:gray;
     color: black;
     border-radius: 10px;
 
