--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: black;
+  color: white;
 }
 
 .App-header {
@@ -9,7 +11,7 @@ body {
 
 
 .nav{
-  border:1px solid #ccc;
+ /* border:1px solid #ccc; */
   border-width:1px 0;
   list-style:none;
   margin:0;
